<resources>
    <string name="app_name">MemoryGame</string>
    <string name="StartPage_Start">Start</string>
    <string name="NewGame">New Game</string>
    <string name="AboutPage">About</string>
    <string name="AchiPage">Achievement</string>
    <string name="SettingPage">Setting</string>
    <string name="GoBack">Back</string>
    <string name="Level_01">1</string>
    <string name="Level_02">2</string>
    <string name="Level_03">3</string>
    <string name="Popup_win_0">WINNER !</string>
    <string name="Pop2Menu">Menu</string>
    <string name="Popup_lose_0">Time Run Out !</string>
    <string name="Popup_lose_1">Retry</string>
    <string name="Popup_win_1">Next</string>
    <string name="achitest">Not Achi</string>
    <string name="achitest2">Achi!!!</string>
</resources>