<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/popup_lose_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goMenuPage"
        android:text="@string/Popup_lose_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/popLose2Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goMenuPage"
        android:text="@string/Pop2Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_lose_0" />

    <Button
        android:id="@+id/pop_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goRestart"
        android:text="@string/Popup_lose_1"
        app:layout_constraintBottom_toTopOf="@+id/popLose2Menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_lose_0" />
</androidx.constraintlayout.widget.ConstraintLayout>